vlib/v/checker/tests/unsafe_generic_call_test.out
vlib/v/checker/tests/unsafe_generic_call_test.vv:1:1: error: a _test.v file should have *at least* one `test_` function
    1 | module main
      | ^
    2 | 
    3 | import arrays
Details: The name of a test function in V, should start with `test_`.
The test function should take 0 parameters, and no return type. Example:
fn test_xyz(){ assert 2 + 2 == 4 }
